set the quirk height default to NS_AUTOHEIGHT if we are in a unconstrained container bug 189840 r/sr=roc+moz a=asa